--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="/src/App.css" rel="stylesheet">
+
     <title>Calculator</title>
   </head>
-  <body class="bg-green-400">
+  <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
